Collapse: fix styling, add shadow and better padding

--- a/components/_parts.scss
+++ b/components/_parts.scss
@@ -136,14 +136,19 @@ table
 
     .content, >button
     {
-        padding: 1rem;
+        padding: 1rem 0 1rem 1rem;
         box-sizing: border-box;
         color: var(--col-fg);
     }
 
+    &.shadow
+    {
+        box-shadow: 0 2px 2px #00000076;
+    }
+
     >button
     {
-        background-color: var(--col-bg-extra);
+        background-color: var(--col-bg);
         cursor: pointer;
     }
 
@@ -154,7 +159,7 @@ table
             background-color: var(--col-bg-tint);
             &:hover
             {
-                background-color: var(--col-bg-extra);
+                background-color: var(--col-bg);
             }
         }
 
